# hacknarock

./: .env  .gitignore  BEHAVIORAL_ADOPTION_STRATEGY.md  README.md  docker-compose.yml  plan-participantAvailabilitySelection.prompt.md
backend/: .env  .env.example  .gitignore  DOCKER_QUICKSTART.md  Dockerfile  HackNaRock_E2E.postman_collection.json  README.md  db.py  docker-compose.yml  main.py  pyproject.toml
backend/auth/: dependencies.py  models.py  router.py  service.py
backend/checklist_service/: checklist_service.py
backend/map_service/: grounding_service.py  test_grounding_service.py  test_grounding_service_conference.py  test_grounding_service_date_night.py
backend/meetings/: common.py  domain.py  router.py  service.py
backend/scripts/: seed_db.py  seed_deadline_update_test.py
backend/src/: app.py
backend/src/api_integration/: router.py  service.py
backend/src/api_integration/models/: __init__.py  create_meeting_request_dto.py  create_meeting_response_dto.py  dashboard_meeting_dto.py  dashboard_response_dto.py  poll_option_dto.py  poll_response_dto.py  vote_request_dto.py  vote_response_dto.py
backend/src/auth/: dependencies.py  models.py  router.py  service.py
backend/src/checklist_service/: __init__.py
backend/src/core/: config.py
backend/src/database/: __init__.py  meeting_states.py  session.py
backend/src/grounding_service/: grounding_service.py  user.py
backend/src/meetings/: common.py  domain.py  models.py  router.py  service.py
backend/src/model/: __init__.py  api_integration_models.py  auth_models.py  meetings_models.py
backend/src/scripts/: clear_db.py  create_db.py  seed_finalized_meetings.py
backend/tests/: test_api_integration_router.py  test_app_schema.py  test_auth_router.py  test_checklist_service.py  test_grounding_service.py  test_grounding_service_conference.py  test_grounding_service_date_night.py  test_meeting_deadline_algorithm.py  test_meetings_router.py
(+89 files in other folders)
