[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for HackNaRock hackathon project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "google-genai>=1.73.1",
    "uvicorn>=0.44.0",
]

[project.scripts]
dev = "main:app"

[dependency-groups]
dev = []

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["src*"]
